--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -57,6 +57,25 @@ google:
         nextClasses:
           - '學員上課班別'
           - '發心上第二班禪修班'
+    # 親眷朋友關係
+    relationships:
+      spreadsheet_id: '試算表的 Google ID'
+      sheet_name: '親眷朋友關係'
+      header_row: 2
+      fields_map:
+        'fullName': '姓名'
+        'dharmaName': '法名'
+        'gender': '性別'
+        'studentId': '學員編號'
+        'birthday': '生日末四碼'
+        'phone': '行動電話末四碼'
+        'relationKeys':
+          - '關係代碼1'
+          - '關係代碼2'
+          - '關係代碼3'
+          - '關係代碼4'
+          - '關係代碼5'
+          - '關係代碼6'
 
 # MS Excel 的相關詋定
 excel:
