Squashed commit of the following:
commit 5d62db8b7da3a490cd31161ac700c1ddefe481d0
Author: Mac <i486dx2@gmail.com>
Date:   Sat Sep 21 18:10:48 2024 +0800

    save

commit df5bc0c7e5365a9e1fd8c95610ad662a591fd8c1
Author: Mac <i486dx2@gmail.com>
Date:   Sat Sep 21 15:46:25 2024 +0800

    update config-sample.yaml

--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -122,6 +122,7 @@ excel:
     spreadsheet_folder: '{WORKSPACE}\禪修活動調查'
     header_row: 2
     header_on_blank_try: 1
+    page_mode: True
 
   # 禪修班意願調查表
   questionnaire:
